# edge-ai-pipeline

./: .gitignore  AGENTS.md  GEMINI.md  colab_setup.ipynb  pyproject.toml  splits.json
configs/: cdgp_week1_toy_cifar10_domain_guided.json  cdgp_week1_toy_cifar10_entropy.json  cdgp_week1_toy_cifar10_random.json  gate_b_transfer_fruits360.json  phase1_fashion_mnist_smoke.json  phase1b_cifar10.json  phase1b_cifar10_smoke.json  phase2_fruits360.json  phase2_plantvillage.json  phase2_pretrain_plantvillage.json  phase2_pretrain_pv_mobilenetv3.json  phase2_pretrain_pv_mobilenetv4.json  phase3_wgisd_compare.json  phase3_wgisd_domain_guided.json  phase3_wgisd_domain_guided_v3_adapted.json  phase3_wgisd_entropy.json  phase3_wgisd_entropy_v3_adapted.json  phase3_wgisd_random.json  phase3_wgisd_random_v3_adapted.json  phase3_wgisd_setup.json  phase3_wgisd_smoke.json  tmp.txt
docs/: Agricultural Object Detection Research.md  CDGP_COLAB_KAGGLE_SETUP.md  CDGP_PLAN.md  GOALS.md  IMPLEMENTATION_SPEC.md  KAGGLE_WEEK1_NOTEBOOK.md  PHASE1_PHASE2_REVIEWER_GUIDE.md  PUBLICATION_STRATEGY.md  WHAT_TO_RUN_NOW.md
scripts/: analyze_phase3.py  analyze_results.py  diagnose_week1_domain_signal.py  inject_phase3_checkpoint.py  report_week1_batch.py  run_week1_batch.ps1  run_week1_batch_calibrated.ps1  run_week1_batch_kaggle.sh  run_week1_toy.ps1
src/: main.py
tests/: test_artifacts.py  test_backbone_wiring.py  test_cifar10_domain_confusion.py  test_cloud_configs.py  test_config.py  test_data_pool.py  test_gate_a.py  test_gate_b.py  test_gate_c.py  test_phase2_phase3.py  test_pipeline_smoke.py  (+5 more)
(+67 files in other folders)
